log
Thu, Mar 20, 2025  5:25:05 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:33:02 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:8: error: expected expression before ')' token
       ()
        ^
exercises.c:58:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma = 5;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
09dcc48
Thu, Mar 20, 2025  5:36:35 PM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:17: error: passing argument 1 of 'pushFront' from incompatible pointer type [-Werror=incompatible-pointer-types]
       pushFront(&i, L);
                 ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'List * {aka struct List *}' but argument is of type 'int *'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
027d5da
Thu, Mar 20, 2025  5:36:43 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:17: error: passing argument 1 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(i, L);
                 ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'List * {aka struct List *}' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
22523ca
Thu, Mar 20, 2025  5:37:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1f64a5e
Thu, Mar 20, 2025  5:37:23 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:20: error: invalid type argument of unary '*' (have 'int')
       pushFront(L, *i);
                    ^~
Compilation failed
2b495dc
Thu, Mar 20, 2025  5:37:31 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18e0559
Thu, Mar 20, 2025  5:38:16 PM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7452075
Thu, Mar 20, 2025  5:48:00 PM: 
 exercises.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:23: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
       int *elemento = (List*)malloc(sizeof(L));
                       ^
exercises.c:49:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:79:23: error: expected expression before ')' token
    for(int i = 0; i >=)
                       ^
exercises.c:80:12: error: comparison between pointer and integer [-Werror]
    if(elem == L)
            ^~
exercises.c:81:1: error: expected expression before '}' token
 }
 ^
exercises.c:78:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a5712b5
Thu, Mar 20, 2025  5:48:12 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:79:23: error: expected expression before ')' token
    for(int i = 0; i >=)
                       ^
exercises.c:80:12: error: comparison between pointer and integer [-Werror]
    if(elem == L)
            ^~
exercises.c:81:1: error: expected expression before '}' token
 }
 ^
exercises.c:78:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d82845b
Thu, Mar 20, 2025  5:48:43 PM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6b2e404
Thu, Mar 20, 2025  5:49:01 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
23f53e4
Thu, Mar 20, 2025  5:51:32 PM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
d8fa6f5
Thu, Mar 20, 2025  5:52:09 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
922668c
Thu, Mar 20, 2025  5:55:08 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
f17bf64
